# split_op

./: .gitignore  Cargo.toml  split_op.pyi  tests.ipynb
data/: lj_ground.npy
src/: lib.rs  operations.rs
