[package]
name = "split_op"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "split_op"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22.4", features = ["num-complex"]}
pyo3-log = "0.11.0"
log = "0.4.22"
ndarray = "0.16.1"
num = "0.4.3"
split_operator = { git = "https://github.com/Wleter/split_operator" }
quantum = { git = "https://github.com/Wleter/quantum" }
rayon = "1.10.0"
faer = "0.19.4"
faer-ext = { version = "0.3.0", features = ["ndarray"] }
